# backend/src/modules/reports/report-type.enum.ts
@@ -1,4 +1,5 @@
 export enum ReportType {
   DEVICES = 'devices',
   ALERTS = 'alerts',
+  SAC_STATISTICS = 'sac-statistics',
 }
